add: new functions in history, feat: refactor product fields
