# app.ts
@@ -7,6 +7,7 @@ import { warehouseRoutes } from './src/routes/warehouse.Routes';
 import morgan from 'morgan';
 import { authRouter } from './src/routes/auth.Routes';
 import { stockRoutes } from './src/routes/stock.Routes';
+import { historyRoutes } from './src/routes/history.Routes';
 const app = express();
 
 const swagg = JSON.parse(readFileSync('./src/utils/swagger.json', 'utf-8'));
@@ -22,6 +23,7 @@ app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swagg));
 app.use('/api/warehouse', warehouseRoutes);
 app.use('/api/product', productRoutes)
 app.use('/api/stock', stockRoutes);
+app.use('/api/history', historyRoutes);
 
 //auth
 app.use('/api/auth/', authRouter);
