# src/utils/swagger.json
@@ -184,6 +184,15 @@
                 "unit_of_measure": {
                   "example": "any"
                 },
+                "unit_base": {
+                  "example": "any"
+                },
+                "unit_logistic": {
+                  "example": "any"
+                },
+                "factor_convertor": {
+                  "example": "any"
+                },
                 "barcode": {
                   "example": "any"
                 },
@@ -416,6 +425,59 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/history/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "sku": {
+                  "example": "any"
+                },
+                "id_warehouse": {
+                  "example": "any"
+                },
+                "movement_type": {
+                  "example": "any"
+                },
+                "quantity": {
+                  "example": "any"
+                },
+                "user": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
           },
           "500": {
             "description": "Internal Server Error"
